# terminite

./: .gitignore  .swp  Cargo.toml  NOTICE  PROVE.md  README.md  STATUS.md
.cargo/: config.toml
.qwen/skills/terminite-multi-agent-relay/: SKILL.md
assets/themes/: one-dark.tmTheme  one-light.tmTheme
auto-relay-test/: story.md
auto-relay-test-v2/: FINDINGS.md  story.md
claude-channel-test/: FINDINGS-green.md  FINDINGS.md  story.md
codex/: codex.md  terminite-presence-report.md
collision-test/: FINDINGS.md  README.md  target.md
conversations/: 2026-05-19-7c4cbc2e.md
faculty/agy-terminite/: SKILL.md
faculty/claude-terminite/: SKILL.md
faculty/codex-terminite/: SKILL.md
faculty/grok-terminite/: SKILL.md
faculty/kimi-terminite/: SKILL.md
faculty/qwen-terminite/: SKILL.md
guide/: README.md  activities-design.md  agents-init-plan.md  architecture.md  codex-wake-decision.md  comms-base.md  config.example.toml  decisions.md  dependencies.md  development.md  friction-log.md  getting-started.md  history.md  lounge-experiment.md  lounge-thesis.md  manifesto.md  nice-to-haves.md  opinions.md  phase1-plan.md  phase2-bundle1-testing.md  phase2-plan.md  phase3-plan.md  roadmap.md  terminal-ai-integrations.md  vision.md  wake-layer.md
lab/lounge-validation/: .gitignore  FINDINGS.md  README.md  agent_mock.py  mcp_bridge.py  proto_server.py  real_codex_followup.sh  run.py  run.sh
lab/lounge-validation/runs/20260529-133910/: summary.md
lab/lounge-validation/runs/20260529-133927/: e1-codex-2.json  e3-codex-2.json  e4-100.json  e4-1000.json  e4-2000.json  e4-250.json  e4-500.json  e4-5000.json  e5-worksession.json  summary.md
lab/lounge-validation/runs/20260529-134221/: e3-codex-1.json  summary.md
lab/lounge-validation/runs/real-codex-20260529-140033/: codex-output.txt
lab/lounge-validation/runs/real-codex-20260529-140539/: codex-output.txt
lab/lounge-validation/runs/real-codex-20260529-141549/: codex-output.txt
logo/: terminite.ai
pty-floor-test/: agy-yellow.md  kimi-purple.md  qwen-green.md
src/: acp.rs  activities.rs  blocks.rs  codex_bridge.rs  config.rs  config_io.rs  crash.rs  fileclaims.rs  fonts.rs  highlight.rs  images.rs  io_util.rs  layout.rs  logging.rs  main.rs  mcp.rs  modules.rs  modules_watch.rs  palette.rs  presence.rs  proto.rs  proto_client.rs  rect.rs  renderer.rs  term.rs  texture.rs
src/acp/: mod.rs  wire.rs
src/renderer/: acp.rs  config.rs  input.rs  io.rs  mod.rs  modules.rs  overlays.rs  panes.rs  proto.rs  render.rs  render_pane.rs  tabs.rs
src/term/: mod.rs  procinfo.rs
tools/: blocks_demo.sh  build-app.sh  install-example-module.sh  log_session.py  proto_demo.sh
tools/archive/: README.md
tools/archive/editor-module/: editor.py  manifest.toml
tools/config-module/: config.py  manifest.toml
tools/debug-module/: debug.py  manifest.toml
tools/editor-module/: editor.py
tools/example-module/: hello.py  manifest.toml
tools/files-module/: browse.py  edit.py  files.py  manifest.toml  wire.py
tools/nav-module/: manifest.toml  nav.py
tools/preview-module/: manifest.toml  preview.py
tools/prove-module/: manifest.toml  prove.py
tools/yazi-module/: manifest.toml
