[package]
name = "terminite"
version = "0.1.0"
edition = "2024"

[dependencies]
# Vendored fork — adds OSC 7 (cwd) + OSC 133 (shell integration) dispatch.
# See vendor/. terminite owns these patches; they travel with the repo.
alacritty_terminal = { path = "vendor/alacritty_terminal" }
arboard = "3.6.1"
base64 = "0.22"
bytemuck = { version = "1.25.0", features = ["derive"] }
glyphon = "0.11.0"
libc = "0.2"
png = "0.17"
pollster = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "29.0.3"
winit = "0.30.13"

