[package]
name = "terminite"
version = "0.1.0"
edition = "2024"

[dependencies]
# Vendored fork — adds OSC 7 (cwd) + OSC 133 (shell integration) dispatch.
# See vendor/. terminite owns these patches; they travel with the repo.
alacritty_terminal = { path = "vendor/alacritty_terminal" }
arboard = "3.6.1"
base64 = "0.22"
bytemuck = { version = "1.25.0", features = ["derive"] }
glyphon = "0.11.0"
libc = "0.2"
png = "0.17"
# Multi-format decoder for the Preview module. Default features off
# to skip formats we don't intend to support yet (tiff/avif/ico/…) —
# keep this list lean and add only when we actually want them.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
pollster = "0.4.0"
# Syntax highlighting for the Editor pane. `default-fancy` selects
# the pure-Rust fancy-regex engine so we avoid the onig C dependency.
# Bundled syntaxes + themes cover ~50 languages — enough to land
# the recognizable "you're editing real code" feel.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
# Watch ~/.terminite/modules/ — a module added (or removed) on disk
# triggers an auto-reload without the user running `terminite module
# reload`. Default features include FSEvents on macOS.
notify = "6"
# Edit config.toml while preserving the user's comments, whitespace,
# and key ordering. The schema-driven config module writes through
# this so a `set` doesn't flatten the file's hand-tuned shape.
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "29.0.3"
winit = "0.30.13"
tungstenite = "0.29.0"

